WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283659
[repaint] Block container fails to repaint child inline box when its ink overflow shrinks
https://bugs.webkit.org/show_bug.cgi?id=283659
Summary
[repaint] Block container fails to repaint child inline box when its ink over...
alan
Reported
2024-11-24 19:29:23 PST
ssia
Attachments
Patch
(12.87 KB, patch)
2024-11-25 07:34 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(13.39 KB, patch)
2024-11-25 08:12 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(14.65 KB, patch)
2024-11-25 11:44 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(13.44 KB, patch)
2024-11-25 15:56 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(13.53 KB, patch)
2024-11-25 18:13 PST
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-11-25 07:34:57 PST
Created
attachment 473362
[details]
Patch
alan
Comment 2
2024-11-25 08:12:08 PST
Created
attachment 473363
[details]
Patch
alan
Comment 3
2024-11-25 11:44:47 PST
Created
attachment 473365
[details]
Patch
alan
Comment 4
2024-11-25 15:56:46 PST
Created
attachment 473366
[details]
Patch
alan
Comment 5
2024-11-25 18:13:12 PST
Created
attachment 473368
[details]
[fast-cq]Patch
EWS
Comment 6
2024-11-25 19:41:43 PST
Committed
287079@main
(aca685c38e7a): <
https://commits.webkit.org/287079@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 473368
[details]
.
Radar WebKit Bug Importer
Comment 7
2024-11-25 19:42:15 PST
<
rdar://problem/140564915
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug